# impressao3d

./: README.md  manage.py  pyproject.toml
apps/core/: views.py
impressao3d/: asgi.py  settings.py  urls.py  wsgi.py
