[tool.poetry]
name = "impressao3d"
version = "0.1.0"
description = "pequeno projeto em django para um site de aluguel de impressoras 3d"
authors = ["sebasthub <playandroidhb@gmail.com>"]
license = "GNU v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
